Fix spelling mistake

--- a/templates/comparison_results.html
+++ b/templates/comparison_results.html
@@ -8,8 +8,8 @@
   {# TODO: Add the temperature, description, and min & max temperature below. Replace 'F' with the
   appropriate units. #}
   <p>
-    It is {{num_degrees}} degrees {{units_ltter}} {{temp_comparison}} in {{city1_info.city}} than in
-    {{city2_info.city}} today.
+    It is {{num_degrees}} degrees {{units_letter}} {{temp_comparison}} in {{city1_info.city}} than
+    in {{city2_info.city}} today.
   </p>
 
   <p>
